x-overflow fix

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,6 +1,8 @@
-html, body {
-	max-width: 100%;
-	overflow-x: hidden;
+@media (max-width: 640px) {
+	body, html {
+		max-width: 100%;
+		overflow-x: hidden;
+	}
 }
 
 code {
